button not showing bug

--- a/public/videostyle.css
+++ b/public/videostyle.css
@@ -174,9 +174,6 @@ h3 {
   .joined {
     font-size: 15px;
   }
-  #cross {
-    display: block;
-  }
 }
 
 .sheild,
